This is the semifinal commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="title_activity_show_timetable">Show_timetable</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
-    <string name= "About">Designed by - \nPriyanshu Agrawal
+    <string name= "About">Designed by - \n Priyanshu Agrawal \n Special Thanks to \n Bhavi Khator Mam
     </string>
 
 </resources>
